# lucas_logger

./: CMakeLists.txt  main.cpp  qlogger.cpp  qlogger.h  qlogger.ui
android/: AndroidManifest.xml
android/src/com/qtlucas/qtlog/: Logger.java  LoggerListener.java
